# runet-filters

./: .gitignore  README.rst  pyproject.toml
rules/: all.uBO.txt  избыточные_англицизмы.uBO.txt  либеральная_оппозиция_рф.uBO.txt  охранители_рф.uBO.txt  политические_ярлыки_левых.uBO.txt  политические_ярлыки_правых.uBO.txt  уголовный_жаргон.uBO.txt  чиновники_рф.uBO.txt  чиновники_сша.uBO.txt  чиновники_украины.uBO.txt  шоу_бизнес_рф.uBO.txt
runet_filters/: patterns.py  rules.py  tags.py
uBO/культура/: тренды.txt
uBO/политика/левые/: ярлыки.txt
uBO/политика/правые/: ярлыки.txt
