[tool.poetry]
name = "runet-filters"
version = "0.1.0"
description = ""
authors = ["Ruslan Ilyasovich Gilfanov <ri.gilfanov@yandex.ru>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
